--- a/css/blocks.css
+++ b/css/blocks.css
@@ -652,7 +652,7 @@ Version: 1.0
 /*	PROMO BLOCK 3
 /*----------------------------------------------------*/
 .promo-3 {
-    background: url("../images/sc.JPG") center top no-repeat;
+    background: url("../images/sc.jpg") center top no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
